<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CongraFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/congraImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/congra"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_weight="3.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/fab_margin"
                    android:textSize="30dp"
                    android:text="@string/congra"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:padding="@dimen/fab_margin"
                    android:textSize="20dp"
                    android:lineSpacingMultiplier="2"
                    android:text="@string/congraContent"/>

                <Button
                    android:id="@+id/goBackBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/fab_margin"
                    android:padding="@dimen/fab_margin"
                    android:text="@string/goBack" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>