<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_weight="3.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout

                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="10px"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout

                            android:layout_weight="1.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_gravity="center_vertical"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:textColor="@color/white"
                                android:text="@string/resttime"/>
                        </RelativeLayout>


                        <RelativeLayout

                            android:layout_weight="1.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <Spinner
                                android:id="@+id/restTimeSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/white"
                                android:spinnerMode="dropdown"/>

                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="10px"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <RelativeLayout

                            android:layout_weight="1.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_gravity="center_vertical"
                                android:layout_centerVertical="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15dp"
                                android:textColor="@color/white"
                                android:text="@string/rounds"/>
                        </RelativeLayout>


                        <RelativeLayout

                            android:layout_weight="1.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <Spinner
                                android:id="@+id/roundsSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:backgroundTint="@color/white"
                                android:spinnerMode="dropdown"/>
                        </RelativeLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView

                        android:layout_gravity="left"
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/burpee" />
                        <RelativeLayout
                            android:layout_weight="2.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/burpee"
                                android:textSize="15dp" />
                        </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/split_jump" />
                        <RelativeLayout
                            android:layout_weight="2.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/splitjump"
                                android:textSize="15dp" />
                        </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1.0"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@mipmap/squat_jumps" />
                        <RelativeLayout
                            android:layout_weight="2.0"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:text="@string/squatjump"
                                android:textSize="15dp" />
                        </RelativeLayout>
                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/startworkout_layout"
            android:clickable="true"
            android:layout_weight="3.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/startworkout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/startworkout"
                android:textColor="@color/white"
                android:textSize="15dp" />
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>