<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="1.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_weight="5.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:text="@string/burpees"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView

                            android:layout_gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/burpee" />
                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_weight="5.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:text="@string/split_jump"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView

                            android:layout_gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/split_jump" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_weight="5.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:text="@string/burpees"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView

                            android:layout_gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/burpee" />
                    </RelativeLayout>

                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white">
                    <RelativeLayout
                        android:layout_weight="5.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorPrimary"
                            android:layout_centerVertical="true"
                            android:layout_centerHorizontal="true"
                            android:textSize="15dp"
                            android:textStyle="bold"
                            android:text="@string/squat_jump"/>
                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_weight="1.0"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView

                            android:layout_gravity="left"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            app:srcCompat="@mipmap/squat_jumps" />
                    </RelativeLayout>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="5.0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/splash_bg_dark">

                <RelativeLayout
                    android:layout_weight="2.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="15dp"
                        android:text="@string/timeleft_workout"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/workout_timeleft"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="25dp"/>
                </RelativeLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_weight="1.0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/splash_bg_light">
                <RelativeLayout
                    android:layout_weight="2.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/splash_bg_dark"
                        android:textSize="15dp"
                        android:text="@string/rounds_workout"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_weight="1.0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/workout_rounds"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/splash_bg_dark"
                        android:textSize="25dp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>